2004-11-26  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/latency/latency.c (main): Allow for setting the
	sampling period.

2004-11-25  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Pass RTAI_KMOD_CFLAGS as needed.

2004-11-24  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/module.c (__xeno_skin_init): Fix init without
	user-space support.

	* arch/i386/hal/hal.c (rthal_trap_fault): Remove lazy handling of
	on-demand kernel memory mapping, leaving the burden to Adeos
	(which does it eagerly instead, see include/asm-i386/pgalloc.h).

2004-11-24  Marc Kleine-Budde <kleine-budde@gmx.de>

	* configure.in: Fix various m4 quoting issues.

2004-11-23  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/defconfig: Rebuild sound versions.

2004-11-22  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Use pretty printing for help strings
	(AS_HELP_STRING).

	* nucleus: Fix various undefined symbols with fusion-less builds.

	* nucleus/timer.c (xntimer_start): Do not check for preposterous
	dates: the start value is a duration and not an absolute date, and
	dates in the past are caught when programming the next shot
	anyway.

2004-11-21  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Upgrade to autoconf 2.59 and friends.

	* nucleus/lib/fusion.c: 
	* skins/rtai/syscall.c: Qualify __user pointers to have them
	"sparse"-friendly.

	* config/autoconf/acinclude.m4:
	* sim/acinclude.m4: Fix new pedantic autoconf whim: quote all
	macro names in definitions.

2004-11-19  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.4

2004-11-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8 final.

2004-11-18  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/mutex.h: Fix forward declaration of RT_TASK.

	* skins/rtai/task.c (rt_task_set_mode): Allow for changing the
	mode bits of the current task.

	* skins/rtai/sem.c (rt_sem_broadcast): Add broadcasting op.

	* nucleus/pod.c (xnpod_set_thread_periodic): Allow passing a