@@ -64,52 +64,54 @@
 #define __rtai_task_sleep_until   11
 #define __rtai_task_unblock       12
 #define __rtai_task_inquire       13
-#define __rtai_timer_start        14
-#define __rtai_timer_stop         15
-#define __rtai_timer_read         16
-#define __rtai_timer_tsc          17
-#define __rtai_timer_ns2ticks     18
-#define __rtai_timer_ticks2ns     19
-#define __rtai_timer_inquire      20
-#define __rtai_sem_create         21
-#define __rtai_sem_bind           22
-#define __rtai_sem_delete         23
-#define __rtai_sem_p              24
-#define __rtai_sem_v              25
-#define __rtai_sem_inquire        26
-#define __rtai_event_create       27
-#define __rtai_event_bind         28
-#define __rtai_event_delete       29
-#define __rtai_event_pend         30
-#define __rtai_event_post         31
-#define __rtai_event_inquire      32
-#define __rtai_mutex_create       33
-#define __rtai_mutex_bind         34
-#define __rtai_mutex_delete       35
-#define __rtai_mutex_lock         36
-#define __rtai_mutex_unlock       37
-#define __rtai_mutex_inquire      38
-#define __rtai_cond_create        39
-#define __rtai_cond_bind          40
-#define __rtai_cond_delete        41
-#define __rtai_cond_wait          42
-#define __rtai_cond_signal        43
-#define __rtai_cond_broadcast     44
-#define __rtai_cond_inquire       45
-#define __rtai_queue_create       46
-#define __rtai_queue_bind         47
-#define __rtai_queue_delete       48
-#define __rtai_queue_alloc        49
-#define __rtai_queue_free         50
-#define __rtai_queue_send         51
-#define __rtai_queue_recv         52
-#define __rtai_queue_inquire      53
-#define __rtai_heap_create        54
-#define __rtai_heap_bind          55
-#define __rtai_heap_delete        56
-#define __rtai_heap_alloc         57
-#define __rtai_heap_free          58
-#define __rtai_heap_inquire       59
+#define __rtai_task_notify        14
+#define __rtai_task_set_mode      15
+#define __rtai_timer_start        16
+#define __rtai_timer_stop         17
+#define __rtai_timer_read         18
+#define __rtai_timer_tsc          19
+#define __rtai_timer_ns2ticks     20
+#define __rtai_timer_ticks2ns     21
+#define __rtai_timer_inquire      22
+#define __rtai_sem_create         23
+#define __rtai_sem_bind           24
+#define __rtai_sem_delete         25
+#define __rtai_sem_p              26
+#define __rtai_sem_v              27
+#define __rtai_sem_inquire        28
+#define __rtai_event_create       29
+#define __rtai_event_bind         30
+#define __rtai_event_delete       31
+#define __rtai_event_pend         32
+#define __rtai_event_post         33
+#define __rtai_event_inquire      34
+#define __rtai_mutex_create       35
+#define __rtai_mutex_bind         36
+#define __rtai_mutex_delete       37
+#define __rtai_mutex_lock         38
+#define __rtai_mutex_unlock       39
+#define __rtai_mutex_inquire      40
+#define __rtai_cond_create        41
+#define __rtai_cond_bind          42
+#define __rtai_cond_delete        43
+#define __rtai_cond_wait          44
+#define __rtai_cond_signal        45
+#define __rtai_cond_broadcast     46
+#define __rtai_cond_inquire       47
+#define __rtai_queue_create       48
+#define __rtai_queue_bind         49
+#define __rtai_queue_delete       50
+#define __rtai_queue_alloc        51
+#define __rtai_queue_free         52
+#define __rtai_queue_send         53
+#define __rtai_queue_recv         54
+#define __rtai_queue_inquire      55
+#define __rtai_heap_create        56
+#define __rtai_heap_bind          57
+#define __rtai_heap_delete        58
+#define __rtai_heap_alloc         59
+#define __rtai_heap_free          60
+#define __rtai_heap_inquire       61
 
 struct rt_arg_bulk {
 
